--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "campuslearn",
   "version": "1.0.0",
+  "type": "module",
   "main": "ChatbotAssistant.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
