--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "ChatbotAssistant.js",
   "scripts": {
     "cypress:open": "cypress open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:env": "node scripts/generate-env.mjs"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@supabase/supabase-js": "^2.75.0"
   },
   "devDependencies": {
-    "cypress": "^15.4.0"
+    "cypress": "^15.4.0",
+    "dotenv": "^17.2.3"
   }
 }
