--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "cypress": "^15.4.0",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "supabase": "^2.53.6"
   }
 }
