--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SEND_GRID_KEY = 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
+SEND_GRID_KEY = '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'
